--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "to-case": "^2.0.0"
   },
   "devDependencies": {
-    "@types/joi": "^10.4.3",
-    "chai": "^4.1.2",
-    "mocha": "^3.5.3",
+    "typescript": "^2.5.3",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
-    "typescript": "^2.5.3"
+    "mocha": "^3.5.3",
+    "@types/mocha": "^2.2.43",
+    "chai": "^4.1.2",
+    "@types/chai": "^4.0.4"
   }
 }
