--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "homepage": "https://github.com/avivcarmis/smoke-screen#readme",
   "dependencies": {
-    "to-case": "^2.0.0",
-    "yamljs": "^0.3.0"
+    "to-case": "2.0.0",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.43",
-    "@types/yamljs": "^0.2.30",
-    "chai": "^4.1.2",
-    "mocha": "^3.5.3",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.3"
+    "@types/chai": "4.0.4",
+    "@types/mocha": "2.2.43",
+    "@types/yamljs": "0.2.30",
+    "chai": "4.1.2",
+    "mocha": "3.5.3",
+    "ts-node": "3.3.0",
+    "tslint": "5.7.0",
+    "typescript": "2.7.2"
   }
 }
