--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es6",
+    "target": "es5",
+    "lib": ["es6"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
